// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tester/TopBanner/TopBannerButton (intern) Defaults play-test 1`] = `
<div data-test-block="true">
  <button class="_button_2n6jz_1"
          type="button"
  >
    <span class="_iconWrapper_2n6jz_18">
      <svg class="_systemIcon_1b9cs_2 _systemIcon_medium_1b9cs_10 _icon_2n6jz_18"
           viewbox="0 0 24 24"
           focusable="false"
           aria-hidden="true"
           role="img"
      >
        <path d="M3 6h18v2H3V6Zm0 5h18v2H3v-2Zm0 5h18v2H3v-2Z">
        </path>
      </svg>
    </span>
    <span class="_buttonText_2n6jz_27">
      Meny
    </span>
  </button>
</div>
`;

exports[`Tester/TopBanner/TopBannerButton (intern) DefaultsOnMobileScreen smoke-test 1`] = `
<div data-test-block="true">
  <button class="_button_2n6jz_1"
          type="button"
  >
    <span class="_iconWrapper_2n6jz_18">
      <svg class="_systemIcon_1b9cs_2 _systemIcon_medium_1b9cs_10 _icon_2n6jz_18"
           viewbox="0 0 24 24"
           focusable="false"
           aria-hidden="true"
           role="img"
      >
        <path d="M3 6h18v2H3V6Zm0 5h18v2H3v-2Zm0 5h18v2H3v-2Z">
        </path>
      </svg>
    </span>
    <span class="_buttonText_2n6jz_27">
      Meny
    </span>
  </button>
</div>
`;

exports[`Tester/TopBanner/TopBannerButton (intern) VariantFilledOnMobileScreen smoke-test 1`] = `
<div data-test-block="true">
  <button class="_button_2n6jz_1 _button_filled_2n6jz_32"
          type="button"
  >
    <span class="_iconWrapper_2n6jz_18">
      <svg class="_systemIcon_1b9cs_2 _systemIcon_medium_1b9cs_10 _icon_2n6jz_18"
           viewbox="0 0 24 24"
           focusable="false"
           aria-hidden="true"
           role="img"
      >
        <path d="M12 17a2 2 0 0 1-2-2c0-1.11.89-2 2-2a2 2 0 0 1 0 4Zm6 3V10H6v10h12Zm0-12a2 2 0 0 1 2 2v10a2 2 0 0 1-2 2H6a2 2 0 0 1-2-2V10c0-1.11.89-2 2-2h1V6a5 5 0 1 1 10 0v2h1Zm-6-5a3 3 0 0 0-3 3v2h6V6a3 3 0 0 0-3-3Z">
        </path>
      </svg>
    </span>
    <span class="_buttonText_2n6jz_27">
      Logg inn
    </span>
  </button>
</div>
`;

exports[`Tester/TopBanner/TopBannerButton (intern) WithAttributes play-test 1`] = `
<div data-test-block="true">
  <button id="htmlid"
          class="_button_2n6jz_1  dummyClassname"
          lang="nb"
          data-testid="123ID"
          type="button"
  >
    <span class="_iconWrapper_2n6jz_18">
      <svg class="_systemIcon_1b9cs_2 _systemIcon_medium_1b9cs_10 _icon_2n6jz_18"
           viewbox="0 0 24 24"
           focusable="false"
           aria-hidden="true"
           role="img"
      >
        <path d="M3 6h18v2H3V6Zm0 5h18v2H3v-2Zm0 5h18v2H3v-2Z">
        </path>
      </svg>
    </span>
    <span class="_buttonText_2n6jz_27">
      Meny
    </span>
  </button>
</div>
`;

exports[`Tester/TopBanner/TopBannerButton (intern) WithClassNames play-test 1`] = `
<div data-test-block="true">
  <button class="_button_2n6jz_1   dummyClassname"
          type="button"
  >
    <span class="_iconWrapper_2n6jz_18">
      <svg class="_systemIcon_1b9cs_2 _systemIcon_medium_1b9cs_10 _icon_2n6jz_18"
           viewbox="0 0 24 24"
           focusable="false"
           aria-hidden="true"
           role="img"
      >
        <path d="M3 6h18v2H3V6Zm0 5h18v2H3v-2Zm0 5h18v2H3v-2Z">
        </path>
      </svg>
    </span>
    <span class="_buttonText_2n6jz_27 dummyClassname">
      Meny
    </span>
  </button>
</div>
`;

exports[`Tester/TopBanner/TopBannerButton (intern) WithEventHandlers play-test 1`] = `
<div data-test-block="true">
  <button class="_button_2n6jz_1"
          type="button"
  >
    <span class="_iconWrapper_2n6jz_18">
      <svg class="_systemIcon_1b9cs_2 _systemIcon_medium_1b9cs_10 _icon_2n6jz_18"
           viewbox="0 0 24 24"
           focusable="false"
           aria-hidden="true"
           role="img"
      >
        <path d="M3 6h18v2H3V6Zm0 5h18v2H3v-2Zm0 5h18v2H3v-2Z">
        </path>
      </svg>
    </span>
    <span class="_buttonText_2n6jz_27">
      Blitt klikket på
    </span>
  </button>
</div>
`;

exports[`Tester/TopBanner/TopBannerButton (intern) WithRef play-test 1`] = `
<div data-test-block="true">
  <button class="_button_2n6jz_1"
          type="button"
          id="dummyIdForwardedFromRef"
  >
    <span class="_iconWrapper_2n6jz_18">
      <svg class="_systemIcon_1b9cs_2 _systemIcon_medium_1b9cs_10 _icon_2n6jz_18"
           viewbox="0 0 24 24"
           focusable="false"
           aria-hidden="true"
           role="img"
      >
        <path d="M3 6h18v2H3V6Zm0 5h18v2H3v-2Zm0 5h18v2H3v-2Z">
        </path>
      </svg>
    </span>
    <span class="_buttonText_2n6jz_27">
      Meny
    </span>
  </button>
</div>
`;

exports[`Tester/TopBanner/TopBannerButton (intern) WithTitle play-test 1`] = `
<div data-test-block="true">
  <button class="_button_2n6jz_1 _button_filled_2n6jz_32"
          type="button"
  >
    <span class="_iconWrapper_2n6jz_18">
      <svg class="_systemIcon_1b9cs_2 _systemIcon_medium_1b9cs_10 _icon_2n6jz_18"
           viewbox="0 0 24 24"
           focusable="false"
           aria-labelledby="svgtitle-:r5:"
           aria-hidden="false"
           role="img"
      >
        <title id="svgtitle-:r5:">
          Title
        </title>
        <path d="M12 4a4 4 0 1 1 0 8 4 4 0 0 1 0-8Zm0 10c4.42 0 8 1.79 8 4v2H4v-2c0-2.21 3.58-4 8-4Z">
        </path>
      </svg>
    </span>
    <span class="_buttonText_2n6jz_27">
      Knotten, Gudleik
    </span>
  </button>
</div>
`;

exports[`Tester/TopBanner/TopBannerButton (intern) WithVariantFilled smoke-test 1`] = `
<div data-test-block="true">
  <button class="_button_2n6jz_1 _button_filled_2n6jz_32"
          type="button"
  >
    <span class="_iconWrapper_2n6jz_18">
      <svg class="_systemIcon_1b9cs_2 _systemIcon_medium_1b9cs_10 _icon_2n6jz_18"
           viewbox="0 0 24 24"
           focusable="false"
           aria-hidden="true"
           role="img"
      >
        <path d="M12 17a2 2 0 0 1-2-2c0-1.11.89-2 2-2a2 2 0 0 1 0 4Zm6 3V10H6v10h12Zm0-12a2 2 0 0 1 2 2v10a2 2 0 0 1-2 2H6a2 2 0 0 1-2-2V10c0-1.11.89-2 2-2h1V6a5 5 0 1 1 10 0v2h1Zm-6-5a3 3 0 0 0-3 3v2h6V6a3 3 0 0 0-3-3Z">
        </path>
      </svg>
    </span>
    <span class="_buttonText_2n6jz_27">
      Logg inn
    </span>
  </button>
</div>
`;
